# mcf10a-p53-cenpa-hgt

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json
docs/: claude_code_review_prompt.md  data.md  reproducibility.md
paper/: main.tex  references.bib
paper/sections/: abstract.tex  discussion.tex  introduction.tex  limitations.tex  methods.tex  results.tex
results/: baseline_feature_importance.csv  baseline_metrics.csv  baseline_metrics_cv.csv  baseline_metrics_cv_summary.csv  candidate_enrichment_gprofiler.csv  candidate_gene_scores.csv  candidate_gene_scores_annotated.csv  cell_metadata.csv  constraint_resolution_status.json  dataset_summary.json  embedding_quality.csv  external_annotation_status.json  gene_annotations.tsv  gene_modules.csv  hetero_graph_metadata.json  hgt_metrics.csv  hgt_status.json  hgt_training_history.csv  homogeneous_gnn_metrics.csv  label_efficiency.csv  label_maps.json  mcnemar_tests.csv  model_metrics_combined.csv  pipeline_status.json  selected_gene_stats.csv  table_model_metrics.csv
src/: __init__.py  baselines.py  config.py  data_io.py  enrichment_figures.py  external_annotation.py  figures.py  graph_build.py  hgt_model.py  post_hgt_analysis.py  preprocess.py  run_pipeline.py  train_hgt.py  train_homogeneous_gnn.py
tests/: test_data_integrity.py
